--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,13 +4,105 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            background-color: #f4f4f4;
+            color: #333;
+            width: 100vw;
+            height: 100vh;
+            background-image: url('https://wallpapers.com/images/hd/funny-dog-wallpaper-g1dtm1tg86hxmaia.jpg');
+            background-size: cover;
+            padding: 20px;
+        }
+        .flex {
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+        }
+        .align-items-center {
+            align-items: end;
+            height: 100vh;
+        }
+        .justify-content-between {
+            justify-content: space-between;
+            width: 100%;
+        }
+        .w-100 {
+            width: 100%;
+        }
+        .vertical-flex {
+            flex-direction: column;
+            display: flex;
+            gap: 5px;
+            align-items: stretch;
+        }
+        button {
+            cursor: pointer;
+            padding: 10px 15px;
+            border: none;
+            background-color: #007BFF;
+            color: white;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        button.danger {
+            background-color: #DC3545;
+        }
+        button.danger:hover {
+            background-color: #a71d2a;
+        }
+        input {
+            padding: 7px 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            transition: border-color 0.3s;
+        }
+        .card {
+            background: rgba(255, 255, 255, 0.6);
+            backdrop-filter: blur(10px);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+            width: min(100vw, 300px);
+        }
+        h1 {
+            text-align: center;
+        }
+    </style>
 </head>
-<body>
-    <h1>Usuários</h1>
-    <ul>
-        {% for usuario in usuarios %}
-            <li>{{ usuario.username }}</li>
-        {% endfor %}
-    </ul>
+<body class="flex align-items-center">
+    <div class="card vertical-flex">
+        <h1>Criar usuário</h1>
+        <form action="/novoUsuario" method="POST" class="w-100">
+            <div class="vertical-flex">
+                <label for="nome">Nome de usuário:</label>
+                <input type="text" id="nome" name="nome_usuario" required>
+                <button type="submit" class="w-100">Criar</button>
+            </div>
+        </form>
+    </div>
+    <div class="card">
+        <h1>Usuários</h1>
+        <div class="vertical-flex">
+            {% for usuario in usuarios %}
+            <div class="flex justify-content-between">
+                <form action="/editarUsuario/{{ usuario.id }}" method="POST" class="flex w-100">
+                    <input type="text" name="nome_usuario" value="{{ usuario.username }}" required style="width: 70%;">
+                    <button type="submit">Atualizar</button>
+                </form>
+                <form action="/deletarUsuario/{{ usuario.id }}" method="POST" style="display:inline;">
+                    <button type="submit" class="danger">Deletar</button>
+                </form>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
 </body>
 </html>
